--- a/mainpagewidget.ui
+++ b/mainpagewidget.ui
@@ -26,14 +26,27 @@
   <widget class="QPushButton" name="addButton">
    <property name="geometry">
     <rect>
-     <x>674</x>
-     <y>543</y>
-     <width>91</width>
-     <height>31</height>
+     <x>670</x>
+     <y>545</y>
+     <width>90</width>
+     <height>30</height>
     </rect>
    </property>
    <property name="text">
-    <string>PushButton</string>
+    <string>추가</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="deleteButton">
+   <property name="geometry">
+    <rect>
+     <x>570</x>
+     <y>545</y>
+     <width>90</width>
+     <height>30</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>삭제</string>
    </property>
   </widget>
  </widget>
