--- a/mainpagewidget.ui
+++ b/mainpagewidget.ui
@@ -17,37 +17,47 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>20</y>
+     <y>40</y>
      <width>750</width>
      <height>500</height>
     </rect>
    </property>
   </widget>
-  <widget class="QPushButton" name="addButton">
+  <widget class="QWidget" name="horizontalLayoutWidget">
    <property name="geometry">
     <rect>
-     <x>570</x>
-     <y>545</y>
-     <width>90</width>
-     <height>30</height>
+     <x>490</x>
+     <y>530</y>
+     <width>282</width>
+     <height>80</height>
     </rect>
    </property>
-   <property name="text">
-    <string>추가</string>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="deleteButton">
-   <property name="geometry">
-    <rect>
-     <x>670</x>
-     <y>545</y>
-     <width>90</width>
-     <height>30</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>삭제</string>
-   </property>
+   <layout class="QHBoxLayout" name="horizontalLayout" stretch="0,0,0">
+    <property name="spacing">
+     <number>10</number>
+    </property>
+    <item>
+     <widget class="QPushButton" name="searchButton">
+      <property name="text">
+       <string>검색</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QPushButton" name="addButton">
+      <property name="text">
+       <string>추가</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QPushButton" name="deleteButton">
+      <property name="text">
+       <string>삭제</string>
+      </property>
+     </widget>
+    </item>
+   </layout>
   </widget>
  </widget>
  <resources/>
