검색 기능 구현 및 프록시 모델 통합
- MultiColumnFilterProxyModel 클래스 추가:
  1~5번 컬럼(이름, 전화번호, 이메일, 회사, 직책) 대상 검색 기능 구현
- QLineEdit 실시간 검색 연동:
  텍스트 입력 시 setFilterRegularExpression()으로 즉시 필터링 적용
- 프록시 모델 인덱스 변환 처리:
  삭제/더블클릭 핸들러에서 mapToSource()를 통해 소스 모델 인덱스 변환
- 테이블뷰에 프록시 모델 연결:
  기존 모델 대신 프록시 모델을 사용해 검색 결과 표시
검색 Ui 추가

--- a/mainpagewidget.ui
+++ b/mainpagewidget.ui
@@ -26,23 +26,16 @@
   <widget class="QWidget" name="horizontalLayoutWidget">
    <property name="geometry">
     <rect>
-     <x>490</x>
+     <x>581</x>
      <y>530</y>
-     <width>282</width>
+     <width>191</width>
      <height>80</height>
     </rect>
    </property>
-   <layout class="QHBoxLayout" name="horizontalLayout" stretch="0,0,0">
+   <layout class="QHBoxLayout" name="horizontalLayout" stretch="0,0">
     <property name="spacing">
      <number>10</number>
     </property>
-    <item>
-     <widget class="QPushButton" name="searchButton">
-      <property name="text">
-       <string>검색</string>
-      </property>
-     </widget>
-    </item>
     <item>
      <widget class="QPushButton" name="addButton">
       <property name="text">
@@ -59,6 +52,57 @@
     </item>
    </layout>
   </widget>
+  <widget class="QLabel" name="label">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>10</y>
+     <width>21</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">image: url(:/mainpageImage/mainpageImage/search_30dp_000000.png);
+padding-left: 5px;</string>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignmentFlag::AlignHCenter|Qt::AlignmentFlag::AlignTop</set>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="searchText">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>10</y>
+     <width>121</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">border: 2px solid gray;
+color: rgb(0, 0, 0);
+border-radius: 10px;
+padding: 0 8px;
+background: white;
+padding-left: 19px;</string>
+   </property>
+   <property name="inputMask">
+    <string/>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignmentFlag::AlignBottom|Qt::AlignmentFlag::AlignLeading|Qt::AlignmentFlag::AlignLeft</set>
+   </property>
+  </widget>
+  <zorder>addressTableView</zorder>
+  <zorder>horizontalLayoutWidget</zorder>
+  <zorder>searchText</zorder>
+  <zorder>label</zorder>
  </widget>
  <resources/>
  <connections/>
