--- a/detailpagewidget.ui
+++ b/detailpagewidget.ui
@@ -10,6 +10,24 @@
     <height>513</height>
    </rect>
   </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>311</width>
+    <height>513</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>311</width>
+    <height>513</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
@@ -62,7 +80,7 @@ font: 12pt;</string>
      <x>10</x>
      <y>420</y>
      <width>291</width>
-     <height>84</height>
+     <height>72</height>
     </rect>
    </property>
    <layout class="QHBoxLayout" name="IconLayout">
