--- a/detailpagewidget.ui
+++ b/detailpagewidget.ui
@@ -29,7 +29,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>Form</string>
+   <string>VEDA_AddressBook</string>
   </property>
   <property name="autoFillBackground">
    <bool>false</bool>
