--- a/widget.ui
+++ b/widget.ui
@@ -29,7 +29,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>Widget</string>
+   <string>VEDA_AddressBook</string>
   </property>
  </widget>
  <resources/>
